--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "framer-motion": "^10.16.4",
     "next": "latest",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
